# vapi-client

./: .gitignore  Cargo.toml  README.md  code-gen  config.yaml  fix_chunk_plan.sh  icarai-vapi-api-1.0-resolved.yaml  openapi-resolved.yaml  openapi-unresolved-1.0.yaml  openapi.json  openapi.yml
.openapi-generator/: FILES
docs/: AddVoiceToProviderDto.md  AiEdgeCondition.md  Analysis.md  AnalysisCost.md  AnalysisCostAnalysisType.md  AnalysisCostBreakdown.md  AnalysisPlan.md  AnalyticsApi.md  AnalyticsGetRequest.md  AnalyticsOperation.md  AnalyticsOperationColumn.md  AnalyticsOperationOperation.md  AnalyticsQuery.md  AnalyticsQueryDto.md  AnalyticsQueryGroupByItem.md  AnalyticsQueryResult.md  AnalyticsQueryTable.md  AnthropicCredential.md  AnthropicModel.md  AnthropicModelModel.md  AnthropicModelToolsItem.md  AnthropicThinkingConfig.md  AnyscaleCredential.md  AnyscaleModel.md  AnyscaleModelKnowledgeBase.md  AnyscaleModelToolsInner.md  AnyscaleModelToolsItem.md  AnyscaleModelToolsItemOneOf.md  ApiRequest.md  ApiRequestMethod.md  ApiRequestMode.md  ApiRequestTool.md  Artifact.md  ArtifactMessagesInner.md  ArtifactMessagesItem.md  ArtifactPlan.md  ArtifactPlanRecordingFormat.md  AssemblyAiCredential.md  AssemblyAiTranscriber.md  AssignmentMutation.md  (+1381 more)
json_listener/: Cargo.toml  README.md
json_listener/src/: main.rs
src/: lib.rs
src/apis/: analytics_api.rs  assistants_api.rs  blocks_api.rs  calls_api.rs  chats_api.rs  configuration.rs  files_api.rs  knowledge_base_api.rs  knowledge_bases_api.rs  logs_api.rs  mod.rs  phone_numbers_api.rs  sessions_api.rs  squads_api.rs  test_suite_runs_api.rs  test_suite_tests_api.rs  test_suites_api.rs  tools_api.rs  workflow_api.rs
src/models/: add_voice_to_provider_dto.rs  ai_edge_condition.rs  analysis.rs  analysis_cost.rs  analysis_cost_analysis_type.rs  analysis_cost_breakdown.rs  analysis_plan.rs  analytics_get_request.rs  analytics_operation.rs  analytics_operation_column.rs  analytics_operation_operation.rs  analytics_query.rs  analytics_query_dto.rs  analytics_query_group_by_item.rs  analytics_query_result.rs  analytics_query_table.rs  anthropic_credential.rs  anthropic_model.rs  anthropic_model_model.rs  anthropic_model_tools_item.rs  anthropic_thinking_config.rs  anyscale_credential.rs  anyscale_model.rs  anyscale_model_knowledge_base.rs  anyscale_model_tools_inner.rs  anyscale_model_tools_item.rs  anyscale_model_tools_item_one_of.rs  api_request.rs  api_request_method.rs  api_request_mode.rs  api_request_tool.rs  artifact.rs  artifact_messages_inner.rs  artifact_messages_item.rs  artifact_plan.rs  artifact_plan_recording_format.rs  assembly_ai_credential.rs  assembly_ai_transcriber.rs  assignment_mutation.rs  assistant.rs  (+1366 more)
tests/: README.md  test_calls_api.rs  test_phone_numbers_api.rs
tests/calls/: README.md  (+2 more)
(+6 files in other folders)
