[package]
name = "vapi-client"
version = "0.2.2"
authors = ["OpenAPI Generator team and contributors", "Nikolas Yanek-Chrones"]
description = "Voice AI for developers."
homepage = "https://docs.vapi.ai"
repository = "https://github.com/nikothomas/vapi-client"
keywords = ["vapi", "api", "client", "voiceai"]
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "default-tls"] }
tokio = { version = "1.44.2", features = ["full"] }
serde_path_to_error = { version = "0.1.17" }