[package]
name = "vapi-client"
version = "0.4.0"
authors = ["OpenAPI Generator team and contributors", "Nikolas Yanek-Chrones"]
description = "Unofficial crate for Vapi - Voice AI for developers."
homepage = "https://docs.vapi.ai"
repository = "https://github.com/nikothomas/vapi-client"
keywords = ["vapi", "api", "client", "voiceai"]
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }